# must_test_client

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: constants.py  exception.py
app/api/: data_api.py
app/config/: error.py  error.ui  must_client.ui  res_rc.qrc  res_rс.py  un_main.py
app/models/: data.py
tests/: app_helper.py  conftest.py  test_main_window.py
